# icons-checker

./: CMakeLists.txt  IconsCheck.pro  README.md  Widget.cpp  Widget.h  Widget.ui
src/: Widget.cpp  Widget.h  main.cpp
